cpp/two-fer/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.013s
user	0m0.004s
sys	0m0.009s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
[ 25%] Building CXX object CMakeFiles/two-fer.dir/two_fer_test.cpp.o
[ 50%] Building CXX object CMakeFiles/two-fer.dir/two_fer.cpp.o
[ 75%] Building CXX object CMakeFiles/two-fer.dir/test/tests-main.cpp.o
[100%] Linking CXX executable two-fer
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
[100%] Built target two-fer
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
===============================================================================
All tests passed (3 assertions in 3 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
[100%] Built target test_two-fer
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/two-fer.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/two-fer.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)1490"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
two_fer.cpp                                    2       2   100%   
two_fer_test.cpp                              17      17   100%   
------------------------------------------------------------------------------
TOTAL                                         51      46    90%
------------------------------------------------------------------------------
lines: 90.2% (46 out of 51)
branches: 38.2% (26 out of 68)

real	0m9.083s
user	0m8.448s
sys	0m0.635s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.140s
user	0m0.107s
sys	0m0.034s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.147s
user	0m0.112s
sys	0m0.036s

===============================================================================

Running: clang-format-16 -style=file -i ./two_fer.cpp ./two_fer_test.cpp ./two_fer.h

real	0m0.019s
user	0m0.012s
sys	0m0.007s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./two_fer.cpp ./two_fer_test.cpp ./two_fer.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/two_fer.h:4:10: fatal error: 'string' file not found
#include <string>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/two_fer.h.

real	0m0.482s
user	0m0.455s
sys	0m0.027s


real	0m0.484s
user	0m0.456s
sys	0m0.028s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11380 warnings generated.
46762 warnings generated.
46762 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/two_fer.h.
Suppressed 46767 warnings (46762 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.369s
user	0m6.303s
sys	0m0.066s
Running: clang-tidy-16 ./two_fer.cpp ./two_fer_test.cpp ./two_fer.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/two-fer/two_fer.h:4:10: error: 'string' file not found [clang-diagnostic-error]
#include <string>
         ^~~~~~~~


real	0m6.371s
user	0m6.303s
sys	0m0.068s

===============================================================================

